# django-graphql-example

./: .gitignore  readme.md
backend/: settings.py  urls.py
backend_api/: admin.py  models.py  schema.py
backend_api/fixtures/: data.json
backend_api/migrations/: 0001_initial.py
dev/: prepare.bash  pyproject.toml  reload-database.bash  requirements.txt
rest_api/: serializers.py  views.py
