[tool.poetry]
authors = ["ibqn"]
description = ""
name = "django-graphql-example"
version = "0.1.0"

[tool.poetry.dependencies]
Django = "^3.2"
django-filter = "^2.4.0"
django-graphql-jwt = "^0.3.2"
djangorestframework = "^3.12.4"
graphene = "3.0.0b1"
graphene-django = "3.0.0b1"
python = "^3.8"

[tool.poetry.dev-dependencies]

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]
